--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "npm run lint && npm run build && jest",
     "build": "rimraf dist && tsup src/index.ts --dts",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "prepublishOnly": "npm run build",
     "sao": "ts-node src/cli-engine.ts",
     "typedoc.g": "typedoc src/index.ts --readme none --mode file --out docs/typedoc --excludePrivate --excludeNotExported --theme minimal",
@@ -52,7 +52,9 @@
     "ejs": "^3.1.2",
     "enquirer": "^2.3.6",
     "env-paths": "^2.2.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^9.0.1",
     "hash-sum": "^2.0.0",
     "husky": "^4.2.5",
@@ -67,7 +69,7 @@
     "move-file": "^2.0.0",
     "ora": "^4.0.4",
     "parse-package-name": "^0.1.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "resolve-from": "^5.0.0",
     "rollup": "^2.34.0",
     "shipjs": "0.20.1",
