--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "perfectsao",
-  "version": "2.0.2",
+  "version": "2.0.2-1",
   "description": "Futuristic scaffolding tool ⚔",
   "main": "dist/index.js",
   "bin": "cli.js",
