--- a/package.json
+++ b/package.json
@@ -1,103 +1,103 @@
 {
-  "name": "perfectsao",
-  "version": "2.0.3",
-  "description": "Futuristic scaffolding tool ⚔",
-  "main": "dist/index.js",
-  "bin": "cli.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "/cli.js",
-    "!**/*.test.ts"
-  ],
-  "scripts": {
-    "test": "npm run lint && npm run build && jest",
-    "build": "rimraf dist && tsup src/index.ts --dts",
-    "lint": "eslint . --fix",
-    "prepublishOnly": "npm run build",
-    "sao": "ts-node src/cli-engine.ts",
-    "typedoc.g": "typedoc src/index.ts --readme none --mode file --out docs/typedoc --excludePrivate --excludeNotExported --theme minimal",
-    "release": "shipjs prepare"
-  },
-  "license": "MIT",
-  "engines": {
-    "node": ">=12"
-  },
-  "dependencies": {
-    "update-notifier": "^4.1.0"
-  },
-  "devDependencies": {
-    "@egoist/extract-zip": "^2.0.1",
-    "@types/cross-spawn": "^6.0.2",
-    "@types/ejs": "^3.0.4",
-    "@types/fs-extra": "^9.0.1",
-    "@types/hash-sum": "^1.0.0",
-    "@types/ini": "^1.3.30",
-    "@types/jest": "^25.2.2",
-    "@types/micromatch": "^4.0.1",
-    "@types/move-file": "^1.1.0",
-    "@types/node": "^16.7.10",
-    "@types/parse-package-name": "^0.1.0",
-    "@types/text-table": "^0.2.1",
-    "@types/update-notifier": "^4.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "axios": "^0.19.2",
-    "cac": "^6.5.13",
-    "chalk": "^4.1.0",
-    "cli-table3": "^0.6.0",
-    "cross-spawn": "^7.0.3",
-    "cz-conventional-changelog": "3.2.0",
-    "dot-prop": "^5.2.0",
-    "ejs": "^3.1.2",
-    "enquirer": "^2.3.6",
-    "env-paths": "^2.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "fs-extra": "^9.0.1",
-    "hash-sum": "^2.0.0",
-    "husky": "^4.2.5",
-    "ini": "^1.3.5",
-    "is-binary-path": "^2.1.0",
-    "jest": "^26.0.1",
-    "joycon": "^2.2.5",
-    "lint-staged": "^10.2.2",
-    "log-update": "^4.0.0",
-    "majo": "^0.10.1",
-    "micromatch": "^4.0.2",
-    "move-file": "^2.0.0",
-    "ora": "^4.0.4",
-    "parse-package-name": "^0.1.0",
-    "prettier": "^2.3.2",
-    "resolve-from": "^5.0.0",
-    "rollup": "^2.34.0",
-    "shipjs": "0.20.1",
-    "text-table": "^0.2.0",
-    "ts-jest": "^26.0.0",
-    "ts-node": "^8.10.2",
-    "tsup": "^3.10.1",
-    "type-fest": "^0.20.2",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.1.2",
-    "yarn-global": "^1.2.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "keywords": [
-    "sao",
-    "generator",
-    "egoist",
-    "yeoman",
-    "template",
-    "scaffold",
-    "automation",
-    "kirito",
-    "simple",
-    "easy",
-    "workflow"
-  ]
+	"name": "projenerator",
+	"version": "2.0.3",
+	"description": "Futuristic scaffolding tool ⚔",
+	"main": "dist/index.js",
+	"bin": "cli.js",
+	"types": "dist/index.d.ts",
+	"files": [
+		"dist",
+		"/cli.js",
+		"!**/*.test.ts"
+	],
+	"scripts": {
+		"test": "npm run lint && npm run build && jest",
+		"build": "rimraf dist && tsup src/index.ts --dts",
+		"lint": "eslint . --fix",
+		"prepublishOnly": "npm run build",
+		"sao": "ts-node src/cli-engine.ts",
+		"typedoc.g": "typedoc src/index.ts --readme none --mode file --out docs/typedoc --excludePrivate --excludeNotExported --theme minimal",
+		"release": "shipjs prepare"
+	},
+	"license": "MIT",
+	"engines": {
+		"node": ">=12"
+	},
+	"dependencies": {
+		"update-notifier": "^4.1.0"
+	},
+	"devDependencies": {
+		"@egoist/extract-zip": "^2.0.1",
+		"@types/cross-spawn": "^6.0.2",
+		"@types/ejs": "^3.0.4",
+		"@types/fs-extra": "^9.0.1",
+		"@types/hash-sum": "^1.0.0",
+		"@types/ini": "^1.3.30",
+		"@types/jest": "^25.2.2",
+		"@types/micromatch": "^4.0.1",
+		"@types/move-file": "^1.1.0",
+		"@types/node": "^16.7.10",
+		"@types/parse-package-name": "^0.1.0",
+		"@types/text-table": "^0.2.1",
+		"@types/update-notifier": "^4.1.0",
+		"@typescript-eslint/eslint-plugin": "^2.33.0",
+		"@typescript-eslint/parser": "^2.33.0",
+		"axios": "^0.19.2",
+		"cac": "^6.5.13",
+		"chalk": "^4.1.0",
+		"cli-table3": "^0.6.0",
+		"cross-spawn": "^7.0.3",
+		"cz-conventional-changelog": "3.2.0",
+		"dot-prop": "^5.2.0",
+		"ejs": "^3.1.2",
+		"enquirer": "^2.3.6",
+		"env-paths": "^2.2.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"fs-extra": "^9.0.1",
+		"hash-sum": "^2.0.0",
+		"husky": "^4.2.5",
+		"ini": "^1.3.5",
+		"is-binary-path": "^2.1.0",
+		"jest": "^26.0.1",
+		"joycon": "^2.2.5",
+		"lint-staged": "^10.2.2",
+		"log-update": "^4.0.0",
+		"majo": "^0.10.1",
+		"micromatch": "^4.0.2",
+		"move-file": "^2.0.0",
+		"ora": "^4.0.4",
+		"parse-package-name": "^0.1.0",
+		"prettier": "^2.3.2",
+		"resolve-from": "^5.0.0",
+		"rollup": "^2.34.0",
+		"shipjs": "0.20.1",
+		"text-table": "^0.2.0",
+		"ts-jest": "^26.0.0",
+		"ts-node": "^8.10.2",
+		"tsup": "^3.10.1",
+		"type-fest": "^0.20.2",
+		"typedoc": "^0.19.2",
+		"typescript": "^4.1.2",
+		"yarn-global": "^1.2.0"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+	"keywords": [
+		"sao",
+		"generator",
+		"egoist",
+		"yeoman",
+		"template",
+		"scaffold",
+		"automation",
+		"kirito",
+		"simple",
+		"easy",
+		"workflow"
+	]
 }
