--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,25 @@
 	"compilerOptions": {
 		"target": "es2018",
 		"module": "commonjs",
+		"outDir": "./dist",
+		"sourceMap": true,
+		"declaration": true,
+		"resolveJsonModule": true,
 		"strict": true,
 		"esModuleInterop": true,
-		"skipLibCheck": true,
+		"skipLibCheck": false,
 		"forceConsistentCasingInFileNames": true,
-		"baseUrl": "src",
+		"baseUrl": "./src",
 		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true,
 		"types": [
 			"node",
 			"jest"
 		],
 	},
+	"include": [
+		"src/"
+	],
+	"exclude": [
+		"node_modules"
+	],
 }
