--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "projenerator",
-	"version": "0.0.8",
+	"version": "0.0.9-1",
 	"description": "Simple and flexible scaffolding",
 	"main": "dist/index.js",
 	"bin": {
@@ -91,7 +91,7 @@
 		"ts-jest": "^26.0.0",
 		"ts-node": "^8.10.2",
 		"tsup": "^5.5.0",
-		"type-fest": "^0.20.2",
+		"type-fest": "^2.5.2",
 		"typescript": "^4.1.2",
 		"yarn-global": "^1.2.0"
 	},
