--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"test": "jest",
 		"lint": "eslint . --fix",
 		"prepublishOnly": "yarn build",
-		"release": "dotenv release-it --only-version"
+		"release": "dotenv release-it --ci"
 	},
 	"license": "MIT",
 	"engines": {
