--- a/.github/workflows/run-release.yml
+++ b/.github/workflows/run-release.yml
@@ -13,14 +13,18 @@ jobs:
         with:
           fetch-depth: 0
       - name: git config
-      - run: npm i
-      - run: npm test
-      - run: npm run build
-        run: |
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: https://registry.npmjs.org/
+      - run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-      - run: npm install
-      - run: npm run release
+      - run: |
+          npm i
+          npm test
+          npm run build
+          npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
