--- a/.github/workflows/run-release.yml
+++ b/.github/workflows/run-release.yml
@@ -28,8 +28,8 @@ jobs:
           else
             npm i
           fi
-        run: npm run build
-        run: npm run release
+      - run: npm run build
+      - run: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
