--- a/.github/workflows/run-gh-release.yml
+++ b/.github/workflows/run-gh-release.yml
@@ -28,8 +28,9 @@ jobs:
           else
             npm i
           fi
+      - run: npm run test
       - run: npm run build
+      - run: npm pack
       - run: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
