--- a/.github/workflows/run-gh-release.yml
+++ b/.github/workflows/run-gh-release.yml
@@ -32,5 +32,5 @@ jobs:
       - run: npm run build
       - run: npm run release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
