--- a/.github/workflows/run-gh-release.yml
+++ b/.github/workflows/run-gh-release.yml
@@ -1,12 +1,13 @@
 name: Create new Release
 
 on: 
-  push:
+  pull_request:
     branches: 
       - master
 
 jobs:
   release:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
