--- a/package.json
+++ b/package.json
@@ -27,8 +27,27 @@
 		"node": ">=12"
 	},
 	"dependencies": {
+		"chalk": "^4.1.2",
 		"rimraf": "^3.0.2",
-		"update-notifier": "^5.1.0"
+		"update-notifier": "^5.1.0",
+		"ejs": "^3.1.2",
+		"enquirer": "^2.3.6",
+		"text-table": "^0.2.0",
+		"log-update": "^4.0.0",
+		"majo": "^0.10.1",
+		"micromatch": "^4.0.2",
+		"move-file": "^2.0.0",
+		"cli-table3": "^0.6.0",
+		"hash-sum": "^2.0.0",
+		"ora": "^4.0.4",
+		"cac": "^6.5.13",
+		"parse-package-name": "^0.1.0",
+		"resolve-from": "^5.0.0",
+		"joycon": "^2.2.5",
+		"is-binary-path": "^2.1.0",
+		"cross-spawn": "^7.0.3",
+		"fs-extra": "^9.0.1",
+		"dot-prop": "^5.2.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.14.8",
@@ -56,39 +75,20 @@
 		"axios": "^0.24.0",
 		"babel-jest": "^27.1.0",
 		"babel-plugin-module-resolver": "^4.1.0",
-		"cac": "^6.5.13",
-		"chalk": "^4.1.0",
-		"cli-table3": "^0.6.0",
-		"cross-spawn": "^7.0.3",
 		"cz-conventional-changelog": "3.2.0",
-		"dot-prop": "^5.2.0",
 		"dotenv-cli": "^4.0.0",
-		"ejs": "^3.1.2",
-		"enquirer": "^2.3.6",
 		"env-paths": "^2.2.0",
 		"esbuild": "^0.13.10",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"fs-extra": "^9.0.1",
-		"hash-sum": "^2.0.0",
 		"husky": "^7.0.4",
 		"ini": "^1.3.5",
-		"is-binary-path": "^2.1.0",
 		"jest": "^26.0.1",
-		"joycon": "^2.2.5",
 		"lint-staged": "^10.2.2",
-		"log-update": "^4.0.0",
-		"majo": "^0.10.1",
-		"micromatch": "^4.0.2",
-		"move-file": "^2.0.0",
-		"ora": "^4.0.4",
-		"parse-package-name": "^0.1.0",
 		"prettier": "^2.3.2",
 		"release-it": "^14.11.6",
-		"resolve-from": "^5.0.0",
 		"rollup": "^2.34.0",
-		"text-table": "^0.2.0",
 		"ts-jest": "^26.0.0",
 		"ts-node": "^8.10.2",
 		"tsup": "^5.5.0",
