--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
 	"files": [
 		"dist",
 		"/cli.js",
-		"!**/*.test.ts"
+		"!**/*.(test|spec).ts"
 	],
 	"scripts": {
-		"start": "yarn build && ts-node cli.js",
-		"dev": "ts-node ./src/cliEngine.ts",
+		"start": "yarn build && ts-node ./src/cli/cli.ts",
+		"dev": "ts-node ./src/cli/cli.ts",
 		"build": "rimraf dist && tsup src/index.ts --dts",
 		"test": "jest",
 		"lint": "eslint . --fix",
@@ -27,27 +27,33 @@
 		"node": ">=12"
 	},
 	"dependencies": {
+		"@types/chalk": "^2.2.0",
 		"chalk": "^4.1.2",
-		"rimraf": "^3.0.2",
-		"update-notifier": "^5.1.0",
+		"cli-table3": "^0.6.0",
+		"commander": "^8.3.0",
+		"cross-spawn": "^7.0.3",
+		"dot-prop": "^5.2.0",
 		"ejs": "^3.1.2",
-		"enquirer": "^2.3.6",
-		"text-table": "^0.2.0",
+		"fs-extra": "^9.0.1",
+		"hash-sum": "^2.0.0",
+		"inquirer": "^8.2.0",
+		"inquirer-autocomplete-prompt": "^1.4.0",
+		"inquirer-checkbox-plus-prompt": "^1.0.1",
+		"inquirer-date-prompt": "^2.0.1",
+		"insight": "^0.11.1",
+		"is-binary-path": "^2.1.0",
+		"joycon": "^2.2.5",
+		"lodash": "^4.17.21",
 		"log-update": "^4.0.0",
 		"majo": "^0.10.1",
 		"micromatch": "^4.0.2",
 		"move-file": "^2.0.0",
-		"cli-table3": "^0.6.0",
-		"hash-sum": "^2.0.0",
 		"ora": "^4.0.4",
-		"cac": "^6.5.13",
 		"parse-package-name": "^0.1.0",
 		"resolve-from": "^5.0.0",
-		"joycon": "^2.2.5",
-		"is-binary-path": "^2.1.0",
-		"cross-spawn": "^7.0.3",
-		"fs-extra": "^9.0.1",
-		"dot-prop": "^5.2.0"
+		"rimraf": "^3.0.2",
+		"text-table": "^0.2.0",
+		"update-notifier": "^5.1.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.14.8",
@@ -56,12 +62,16 @@
 		"@babel/preset-env": "^7.15.4",
 		"@babel/preset-typescript": "^7.15.0",
 		"@egoist/extract-zip": "^2.0.1",
+		"@types/commander": "^2.12.2",
 		"@types/cross-spawn": "^6.0.2",
 		"@types/ejs": "^3.0.4",
 		"@types/fs-extra": "^9.0.1",
 		"@types/hash-sum": "^1.0.0",
 		"@types/ini": "^1.3.30",
+		"@types/inquirer": "^8.1.3",
+		"@types/inquirer-autocomplete-prompt": "^1.3.3",
 		"@types/jest": "^25.2.2",
+		"@types/lodash": "^4.14.176",
 		"@types/micromatch": "^4.0.1",
 		"@types/mkdirp": "^1.0.2",
 		"@types/move-file": "^1.1.0",
