--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"target": "es2018",
 		"module": "commonjs",
+		"outDir": "dist",
 		"sourceMap": true,
 		"declaration": true,
 		"resolveJsonModule": true,
