--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 	"scripts": {
 		"start": "yarn build && ts-node ./src/cli/cli.ts",
 		"dev": "ts-node ./src/cli/cli.ts",
-		"build": "rimraf dist && tsc",
+		"build": "npm run clean && tsc && babel src --out-dir dist --extensions \".ts,.js,.json\" --source-maps inline",
+		"clean": "rimraf ./dist",
 		"test": "jest",
 		"lint": "eslint . --fix",
 		"prepublishOnly": "yarn build",
@@ -27,7 +28,6 @@
 		"node": ">=12"
 	},
 	"dependencies": {
-		"@types/chalk": "^2.2.0",
 		"chalk": "^4.1.2",
 		"cli-table3": "^0.6.0",
 		"commander": "^8.3.0",
@@ -37,9 +37,6 @@
 		"fs-extra": "^9.0.1",
 		"hash-sum": "^2.0.0",
 		"inquirer": "^8.2.0",
-		"inquirer-autocomplete-prompt": "^1.4.0",
-		"inquirer-checkbox-plus-prompt": "^1.0.1",
-		"inquirer-date-prompt": "^2.0.1",
 		"insight": "^0.11.1",
 		"is-binary-path": "^2.1.0",
 		"joycon": "^2.2.5",
@@ -62,6 +59,7 @@
 		"@babel/preset-env": "^7.15.4",
 		"@babel/preset-typescript": "^7.15.0",
 		"@egoist/extract-zip": "^2.0.1",
+		"@types/chalk": "^2.2.0",
 		"@types/commander": "^2.12.2",
 		"@types/cross-spawn": "^6.0.2",
 		"@types/ejs": "^3.0.4",
@@ -69,7 +67,6 @@
 		"@types/hash-sum": "^1.0.0",
 		"@types/ini": "^1.3.30",
 		"@types/inquirer": "^8.1.3",
-		"@types/inquirer-autocomplete-prompt": "^1.3.3",
 		"@types/jest": "^25.2.2",
 		"@types/lodash": "^4.14.176",
 		"@types/micromatch": "^4.0.1",
