--- a/.github/workflows/run-gh-release.yml
+++ b/.github/workflows/run-gh-release.yml
@@ -31,7 +31,7 @@ jobs:
           fi
       - run: npm run test
       - run: npm run build
-      - run: npm run release
+      - run: npm run release:ci
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
