--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,11 +25,12 @@
 			],
 		},
 	},
-		"include": [
+	"include": [
 		"src/"
 	],
 	"exclude": [
-		"node_modules",
-		"dist"
+		"dist/",
+		"test/",
+		"docs/"
 	],
 }
