--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
 		"cross-spawn": "^7.0.3",
 		"dot-prop": "^5.2.0",
 		"ejs": "^3.1.2",
+		"figlet": "^1.5.2",
 		"fs-extra": "^9.0.1",
 		"hash-sum": "^2.0.0",
 		"inquirer": "^8.2.0",
+		"inquirer-autocomplete-prompt": "^1.4.0",
 		"insight": "^0.11.1",
 		"is-binary-path": "^2.1.0",
 		"joycon": "^2.2.5",
@@ -61,6 +63,7 @@
 		"@types/commander": "^2.12.2",
 		"@types/cross-spawn": "^6.0.2",
 		"@types/ejs": "^3.0.4",
+		"@types/figlet": "^1.5.4",
 		"@types/fs-extra": "^9.0.1",
 		"@types/hash-sum": "^1.0.0",
 		"@types/ini": "^1.3.30",
