--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"!**/*.(test|spec).ts"
 	],
 	"scripts": {
-		"start": "yarn build && node ./dist/cli/index.js",
+		"start": "npm run build && npm run cli",
+		"build:watch": "nodemon --watch src -e ts --ignore dist --exec npm run build",
+		"cli": "node ./dist/cli/index.js",
 		"build": "npm run clean && tsup src/cli/index.ts src/generator/index.ts --dts",
 		"clean": "rimraf ./dist",
 		"test": "jest",
@@ -45,6 +47,7 @@
 		"majo": "^0.10.1",
 		"micromatch": "^4.0.2",
 		"move-file": "^2.0.0",
+		"open": "^8.4.0",
 		"ora": "^4.0.4",
 		"parse-package-name": "^0.1.0",
 		"resolve-from": "^5.0.0",
@@ -76,6 +79,7 @@
 		"@types/node": "^16.7.10",
 		"@types/parse-package-name": "^0.1.0",
 		"@types/rimraf": "^3.0.2",
+		"@types/sinon": "^10.0.6",
 		"@types/text-table": "^0.2.1",
 		"@types/update-notifier": "^4.1.0",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -98,6 +102,7 @@
 		"prettier": "^2.3.2",
 		"release-it": "^14.11.6",
 		"rollup": "^2.34.0",
+		"sinon": "^12.0.1",
 		"ts-node": "^8.10.2",
 		"tsup": "^5.5.0",
 		"type-fest": "^2.5.2",
