--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "grit-cli",
-	"version": "0.2.1",
+	"version": "0.2.6",
 	"description": "Simple and flexible scaffolding",
 	"main": "dist/generator/index.js",
 	"bin": {
-		"grit": "cli/index.js"
+		"grit": "dist/cli/index.js"
 	},
 	"types": "dist/generator/index.d.ts",
 	"files": [
 		"dist",
+		"/cli.js",
 		"!**/*.(test|spec).ts"
 	],
 	"scripts": {
@@ -34,8 +35,8 @@
 		"cross-spawn": "^7.0.3",
 		"dot-prop": "^5.2.0",
 		"ejs": "^3.1.2",
-		"fs-extra": "^9.1.0",
 		"figlet": "^1.5.2",
+		"fs-extra": "^9.1.0",
 		"hash-sum": "^2.0.0",
 		"inquirer": "^8.2.0",
 		"inquirer-autocomplete-prompt": "^1.4.0",
