--- a/my-website/package.json
+++ b/my-website/package.json
@@ -13,21 +13,9 @@
 		"write-translations": "docusaurus write-translations",
 		"write-heading-ids": "docusaurus write-heading-ids"
 	},
-	"browserslist": {
-		"production": [
-			">0.5%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
 	"dependencies": {
-		"@docusaurus/core": "^2.0.0-beta.9",
-		"@docusaurus/preset-classic": "^2.0.0-beta.9",
+		"@docusaurus/core": "2.0.0-beta.9",
+		"@docusaurus/preset-classic": "2.0.0-beta.9",
 		"@mdx-js/react": "^1.6.21",
 		"@svgr/webpack": "^5.5.0",
 		"clsx": "^1.1.1",
@@ -44,5 +32,17 @@
 		"@types/react-helmet": "^6.1.2",
 		"@types/react-router-dom": "^5.1.8",
 		"typescript": "^4.3.5"
+	},
+	"browserslist": {
+		"production": [
+			">0.5%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
