--- a/docs/package.json
+++ b/docs/package.json
@@ -22,7 +22,13 @@
 		"file-loader": "^6.2.0",
 		"prism-react-renderer": "^1.2.1",
 		"react": "^17.0.1",
+		"docusaurus-plugin-sass": "^0.2.1",
+		"cloudinary-react": "^1.7.0",
 		"react-dom": "^17.0.1",
+		"react-intersection-observer": "^8.32.1",
+		"sass": "^1.42.1",
+		"framer-motion": "^4.1.17",
+		"styled-components": "^5.3.1",
 		"url-loader": "^4.1.1"
 	},
 	"devDependencies": {
@@ -31,6 +37,7 @@
 		"@types/react": "^17.0.18",
 		"@types/react-helmet": "^6.1.2",
 		"@types/react-router-dom": "^5.1.8",
+		"docusaurus-plugin-module-alias": "^0.0.2",
 		"typescript": "^4.3.5"
 	},
 	"browserslist": {
