refactor generator config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"baseUrl": "./src",
 		"moduleResolution": "node",
+		"noImplicitAny": false,
 		"types": [
 			"node",
 			"jest"
