--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"chalk": "^4.1.2",
 		"cli-table3": "^0.6.0",
 		"commander": "^8.3.0",
+		"cosmiconfig": "^7.0.1",
 		"cross-spawn": "^7.0.3",
 		"dot-prop": "^5.3.0",
 		"ejs": "^3.1.2",
