--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"test": "jest",
 		"lint": "eslint . --fix",
 		"prepublishOnly": "yarn build",
-		"release": "dotenv release-it --only-version",
+		"release": "dotenv release-it",
 		"release:ci": "dotenv release-it --ci"
 	},
 	"license": "MIT",
