--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
 		"lodash": "^4.17.21",
 		"log-update": "^4.0.0",
 		"majo": "^0.10.1",
-		"micromatch": "^4.0.2",
-		"move-file": "^2.0.0",
+		"micromatch": "4.0.4",
+		"move-file": "2.1.0",
 		"open": "^8.4.0",
-		"ora": "^4.0.4",
+		"ora": "4.1.1",
 		"parse-package-name": "^0.1.0",
 		"resolve-from": "^5.0.0",
 		"rimraf": "^3.0.2",
