--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"dependencies": {
 		"chalk": "^4.1.2",
+		"chokidar": "^3.5.2",
 		"cli-table3": "^0.6.0",
 		"commander": "^8.3.0",
 		"cosmiconfig": "^7.0.1",
@@ -66,6 +67,7 @@
 		"@babel/preset-typescript": "^7.15.0",
 		"@egoist/extract-zip": "^2.0.1",
 		"@types/chalk": "^2.2.0",
+		"@types/chokidar": "^2.1.3",
 		"@types/commander": "^2.12.2",
 		"@types/cross-spawn": "^6.0.2",
 		"@types/ejs": "^3.0.4",
