--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"test": "lerna run test --parallel",
 		"lint": "lerna run lint --parallel",
-		"build": "lerna run build --parallel"
+		"build": "lerna run build --parallel",
+		"release": "yarn test && yarn build && lerna publish"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.14.8",
