--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,7 +29,7 @@
 		"clean": "rimraf ./dist",
 		"test": "jest",
 		"lint": "eslint . --fix",
-		"prepublishOnly": "npm run build",
+		"prepublishOnly": "npm run test && npm run build",
 		"release": "dotenv release-it",
 		"release:ci": "dotenv release-it --ci"
 	},
