--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"@types/update-notifier": "^4.1.0",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
 		"@typescript-eslint/parser": "^2.33.0",
-		"alias-hq": "^5.2.1",
+		"alias-hq": "^5.3.2",
 		"babel-jest": "^27.1.0",
 		"babel-plugin-module-resolver": "^4.1.0",
 		"cz-conventional-changelog": "3.2.0",
@@ -49,6 +49,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"ini": "^1.3.5",
 		"jest": "^26.0.1",
+		"lerna": "^4.0.0",
 		"prettier": "^2.3.2",
 		"release-it": "^14.11.8",
 		"rimraf": "^3.0.2",
@@ -56,8 +57,7 @@
 		"tsconfig-paths": "^3.12.0",
 		"tsup": "^5.10.3",
 		"type-fest": "^2.5.2",
-		"typescript": "^4.1.2",
-		"lerna": "^4.0.0"
+		"typescript": "^4.1.2"
 	},
 	"dependencies": {
 		"clifi": "file:packages\\clifi",
