--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,27 +39,21 @@
 	"dependencies": {
 		"alias-hq": "^5.3.0",
 		"axios": "^0.24.0",
-		"clifi": "file:../clifi",
 		"commander": "^8.3.0",
 		"dot-prop": "^5.3.0",
 		"figlet": "^1.5.2",
 		"fs-extra": "^9.1.0",
-		"gritenv": "file:../env",
 		"ini": "^2.0.0",
 		"inquirer": "^8.2.0",
 		"ora": "4.1.1",
+		"parse-package-name": "^1.0.0",
 		"resolve-from": "^5.0.0",
 		"rimraf": "^3.0.2",
-		"swaglog": "file:../swaglog",
 		"update-notifier": "^5.1.0"
 	},
 	"config": {
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.15",
-		"tsup": "^5.11.4"
 	}
 }
