--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,7 +37,6 @@
 		"node": ">=14"
 	},
 	"dependencies": {
-		"alias-hq": "^5.3.0",
 		"axios": "^0.24.0",
 		"commander": "^8.3.0",
 		"dot-prop": "^5.3.0",
@@ -46,6 +45,7 @@
 		"gritenv": "^0.3.6",
 		"ini": "^2.0.0",
 		"inquirer": "^8.2.0",
+		"jest": "^27.4.7",
 		"ora": "4.1.1",
 		"parse-package-name": "^1.0.0",
 		"resolve-from": "^5.0.0",
@@ -56,6 +56,5 @@
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
-	},
-	"gitHead": "ee8354124e3f783797e963d1c76dd38542e840ba"
+	}
 }
