--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,7 +45,6 @@
 		"gritenv": "^0.3.6",
 		"ini": "^2.0.0",
 		"inquirer": "^8.2.0",
-		"jest": "^27.4.7",
 		"ora": "4.1.1",
 		"parse-package-name": "^1.0.0",
 		"resolve-from": "^5.0.0",
@@ -56,5 +55,6 @@
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
-	}
+	},
+	"gitHead": "be99e7dbd192e65beeaf8ecd6cd5116ddaaf673f"
 }
