--- a/packages/clifi/package.json
+++ b/packages/clifi/package.json
@@ -38,12 +38,13 @@
 		"commander": "^8.3.0",
 		"inquirer": "^8.2.0",
 		"ora": "4.1.1",
-		"swaglog": "file:../swaglog",
+		"swaglog": "^1.0.4",
 		"update-notifier": "^5.1.0"
 	},
 	"config": {
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
-	}
+	},
+	"gitHead": "be99e7dbd192e65beeaf8ecd6cd5116ddaaf673f"
 }
