--- a/docs/package.json
+++ b/docs/package.json
@@ -14,25 +14,25 @@
 		"write-heading-ids": "docusaurus write-heading-ids"
 	},
 	"dependencies": {
-		"@docusaurus/core": "2.0.0-beta.9",
-		"@docusaurus/preset-classic": "2.0.0-beta.9",
+		"@docusaurus/core": "^2.0.0-beta.14",
+		"@docusaurus/preset-classic": "^2.0.0-beta.14",
 		"@mdx-js/react": "^1.6.21",
 		"@svgr/webpack": "^5.5.0",
+		"cloudinary-react": "^1.7.0",
 		"clsx": "^1.1.1",
+		"docusaurus-plugin-sass": "^0.2.1",
 		"file-loader": "^6.2.0",
+		"framer-motion": "^4.1.17",
 		"prism-react-renderer": "^1.2.1",
 		"react": "^17.0.1",
-		"docusaurus-plugin-sass": "^0.2.1",
-		"cloudinary-react": "^1.7.0",
 		"react-dom": "^17.0.1",
 		"react-intersection-observer": "^8.32.1",
 		"sass": "^1.43.5",
-		"framer-motion": "^4.1.17",
 		"styled-components": "^5.3.1",
 		"url-loader": "^4.1.1"
 	},
 	"devDependencies": {
-		"@docusaurus/module-type-aliases": "^2.0.0-beta.9",
+		"@docusaurus/module-type-aliases": "^2.0.0-beta.14",
 		"@tsconfig/docusaurus": "^1.0.3",
 		"@types/react": "^17.0.18",
 		"@types/react-helmet": "^6.1.2",
