--- a/package.json
+++ b/package.json
@@ -1,65 +1,59 @@
 {
-  "name": "@grit/monorepo",
-  "private": true,
-  "workspaces": [
-    "packages/**"
-  ],
-  "scripts": {
-    "test": "lerna run test --parallel",
-    "lint": "lerna run lint --parallel",
-    "build": "lerna run build --parallel",
-    "release": "lerna publish"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-typescript": "^7.15.0",
-    "@egoist/extract-zip": "^2.0.1",
-    "@types/cross-spawn": "^6.0.2",
-    "@types/ejs": "^3.0.4",
-    "@types/figlet": "^1.5.4",
-    "@types/fs-extra": "^9.0.1",
-    "@types/hash-sum": "^1.0.0",
-    "@types/ini": "^1.3.30",
-    "@types/inquirer": "^8.1.3",
-    "@types/jest": "^27.4.0",
-    "@types/lodash": "^4.14.176",
-    "@types/micromatch": "^4.0.1",
-    "@types/mkdirp": "^1.0.2",
-    "@types/node": "^16.7.10",
-    "@types/parse-package-name": "^0.1.0",
-    "@types/rimraf": "^3.0.2",
-    "@types/update-notifier": "^4.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "alias-hq": "^5.3.2",
-    "babel-jest": "^27.1.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "cz-conventional-changelog": "3.2.0",
-    "dotenv-cli": "^4.0.0",
-    "env-paths": "^2.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "ini": "^1.3.5",
-    "jest": "^27.4.7",
-    "lerna": "^4.0.0",
-    "prettier": "^2.3.2",
-    "release-it": "^14.11.8",
-    "rimraf": "^3.0.2",
-    "ts-node": "^8.10.2",
-    "tsconfig-paths": "^3.12.0",
-    "tsup": "^5.10.3",
-    "type-fest": "^2.5.2",
-    "typescript": "^4.1.2"
-  },
-  "dependencies": {
-    "clifi": "file:packages\\clifi",
-    "grit-cli": "file:packages\\cli",
-    "gritenv": "file:packages\\env",
-    "swaglog": "file:packages\\swaglog",
-    "youtill": "file:packages\\youtill"
-  }
+	"name": "@grit/monorepo",
+	"private": true,
+	"workspaces": [
+		"packages/**"
+	],
+	"scripts": {
+		"test": "lerna run test --parallel",
+		"lint": "lerna run lint --parallel",
+		"build": "lerna run build --parallel",
+		"release": "lerna publish"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.14.8",
+		"@babel/core": "^7.15.5",
+		"@babel/plugin-transform-runtime": "^7.15.0",
+		"@babel/preset-env": "^7.15.4",
+		"@babel/preset-typescript": "^7.15.0",
+		"@egoist/extract-zip": "^2.0.1",
+		"@types/cross-spawn": "^6.0.2",
+		"@types/ejs": "^3.0.4",
+		"@types/figlet": "^1.5.4",
+		"@types/fs-extra": "^9.0.1",
+		"@types/hash-sum": "^1.0.0",
+		"@types/ini": "^1.3.30",
+		"@types/inquirer": "^8.1.3",
+		"@types/jest": "^27.4.0",
+		"@types/lodash": "^4.14.176",
+		"@types/micromatch": "^4.0.1",
+		"@types/mkdirp": "^1.0.2",
+		"@types/node": "^16.7.10",
+		"@types/parse-package-name": "^0.1.0",
+		"@types/rimraf": "^3.0.2",
+		"@types/update-notifier": "^4.1.0",
+		"@typescript-eslint/eslint-plugin": "^2.33.0",
+		"@typescript-eslint/parser": "^2.33.0",
+		"alias-hq": "^5.3.2",
+		"babel-jest": "^27.1.0",
+		"babel-plugin-module-resolver": "^4.1.0",
+		"cz-conventional-changelog": "3.2.0",
+		"dotenv-cli": "^4.0.0",
+		"env-paths": "^2.2.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"ini": "^1.3.5",
+		"jest": "^27.4.7",
+		"lerna": "^4.0.0",
+		"prettier": "^2.3.2",
+		"release-it": "^14.11.8",
+		"rimraf": "^3.0.2",
+		"ts-node": "^8.10.2",
+		"tsconfig-paths": "^3.12.0",
+		"tsup": "^5.10.3",
+		"type-fest": "^2.5.2",
+		"typescript": "^4.1.2"
+	},
+	"dependencies": {}
 }
