--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "clifi": "^1.2.11",
     "commander": "^8.3.0",
     "dot-prop": "^5.3.0",
     "figlet": "^1.5.2",
