--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "clifi": "^1.2.12",
+    "clifi": "^1.2.11",
     "commander": "^8.3.0",
     "dot-prop": "^5.3.0",
     "figlet": "^1.5.2",
@@ -50,7 +50,9 @@
     "parse-package-name": "^1.0.0",
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.2",
-    "update-notifier": "^5.1.0"
+    "swaglog": "^1.0.5",
+    "update-notifier": "^5.1.0",
+    "youtill": "^0.2.6"
   },
   "config": {
     "commitizen": {
