--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -58,6 +58,7 @@
 		"parse-package-name": "^1.0.0",
 		"resolve-from": "^5.0.0",
 		"rimraf": "^3.0.2",
+		"swaglog": "^1.0.5",
 		"update-notifier": "^5.1.0",
 		"youtill": "^0.2.6"
 	},
