--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 		"packages/**"
 	],
 	"scripts": {
-		"test": "lerna run test --parallel",
+		"test": "lerna run test --stream --parallel",
 		"lint": "lerna run lint --parallel",
-		"build": "lerna run build --parallel",
+		"build": "lerna run build",
 		"build:watch": "lerna run build:watch --parallel --stream",
 		"release": "lerna publish"
 	},
