--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - checkout
       - run: cd docs
+      - run: yarn install --frozen-lockfile
       - run: yarn run build
     
 
