--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   test-grit:
     docker:
       - image: cimg/node:17.4.0
-    resource_class: highmem
+    resource_class: large
     steps:
       - checkout
       - run: yarn install --frozen-lockfile
