--- a/packages/grit-readme/package.json
+++ b/packages/grit-readme/package.json
@@ -19,7 +19,7 @@
 	"scripts": {
 		"start": "grit . output",
 		"build": "tsc",
-		"test": "yarn build && jest",
+		"test": "jest",
 		"prepublishOnly": "yarn build"
 	},
 	"dependencies": {},
