--- a/packages/grit-readme/package.json
+++ b/packages/grit-readme/package.json
@@ -21,13 +21,6 @@
 		"test": "jest",
 		"prepublishOnly": "yarn build"
 	},
-	"dependencies": {},
-	"devDependencies": {
-		"@babel/preset-env": "^7.16.0",
-		"@babel/preset-typescript": "^7.16.0",
-		"@types/jest": "^27.0.2",
-		"grit-cli": "^0.1.3",
-		"jest": "^27.3.1",
-		"typescript": "^4.4.4"
-	}
+	"dependencies": {}
+
 }
