--- a/packages/grit-typescript/package.json
+++ b/packages/grit-typescript/package.json
@@ -22,13 +22,5 @@
 		"test": "jest",
 		"prepublishOnly": "yarn build"
 	},
-	"dependencies": {},
-	"devDependencies": {
-		"@babel/preset-env": "^7.16.0",
-		"@babel/preset-typescript": "^7.16.0",
-		"@types/jest": "^27.0.2",
-		"jest": "^27.3.1",
-		"release-it": "^14.11.8",
-		"typescript": "^4.4.4"
-	}
+	"dependencies": {}
 }
