--- a/packages/grit-generator/package.json
+++ b/packages/grit-generator/package.json
@@ -23,5 +23,6 @@
 	"dependencies": {
 		"gritenv": "^0.3.9",
 		"validate-npm-package-name": "^3.0.0"
-	}
+	},
+	"gitHead": "d0ce56472d1aeb6a8b7d8110d5dfe3089a268060"
 }
