--- a/packages/grit-nm/package.json
+++ b/packages/grit-nm/package.json
@@ -24,5 +24,6 @@
   },
   "dependencies": {
     "validate-npm-package-name": "^3.0.0"
-  }
+  },
+  "gitHead": "d0ce56472d1aeb6a8b7d8110d5dfe3089a268060"
 }
