--- a/packages/grit-readme/package.json
+++ b/packages/grit-readme/package.json
@@ -19,6 +19,8 @@
 	"scripts": {
 		"start": "grit . output",
 		"test": "jest",
+		"build": "tsc",
 		"prepublishOnly": "yarn build"
-	}
+	},
+	"gitHead": "d0ce56472d1aeb6a8b7d8110d5dfe3089a268060"
 }
