--- a/packages/grit-release-it/package.json
+++ b/packages/grit-release-it/package.json
@@ -23,5 +23,6 @@
     "start": "grit . output",
     "test": "jest",
     "release": "release-it"
-  }
+  },
+  "gitHead": "d0ce56472d1aeb6a8b7d8110d5dfe3089a268060"
 }
