--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@types/parse-package-name": "^0.1.0",
 		"@types/rimraf": "^3.0.2",
 		"@types/update-notifier": "^4.1.0",
+		"@types/validate-npm-package-name": "^3.0.3",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
 		"@typescript-eslint/parser": "^2.33.0",
 		"alias-hq": "^5.3.2",
