add plugin files to grit-typescript

--- a/packages/grit-typescript/package.json
+++ b/packages/grit-typescript/package.json
@@ -14,7 +14,8 @@
 	],
 	"files": [
 		"generator.js",
-		"template/**"
+		"template/**",
+		"plugins/**"
 	],
 	"scripts": {
 		"start": "grit run . output",
